--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="ad340_hello">AD340 - Hello!</string>
     <string name="some_text_here">Some Text Here</string>
     <string name="zipcode_error">Error! Enter a valid zipcode.</string>
+    <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
 </resources>
