--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">AD340-HelloWorld</string>
-    <string name="ad340_hello">AD340 - Hello!</string>
-    <string name="some_text_here">Some Text Here</string>
+    <string name="app_name">AD340 Weather!</string>
+    <string name="forecast_details">Forecast Details</string>
     <string name="zipcode_error">Error! Enter a valid zipcode.</string>
     <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
+
+    // Temp Display Menu
+    <string name="display_units">Display Units</string>
+    <string name="display_units_title">Choose Display Units</string>
+    <string name="display_units_text">Choose which temperature unit to use for display</string>
+    <string name="display_units_dismiss">Restart to apply settings.</string>
+    <string name="show_f">Show using F°</string>
+    <string name="show_c">Show using C°</string>
 </resources>
