--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="display_units_dismiss">Restart to apply settings.</string>
     <string name="show_f">Show using F°</string>
     <string name="show_c">Show using C°</string>
-
+    <string name="bottom_nav_label_today">Today</string>
+    <string name="bottom_nav_label_week">Week</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
