--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AD340 Weather!</string>
+    <string name="app_name">Weather App</string>
     <string name="forecast_details">Forecast Details</string>
     <string name="zipcode_error">Error! Enter a valid zipcode.</string>
     <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
